tests/neg/i2564b.scala
class Foo private() {
  rewrite def foo = new Foo // error
}
